--- a/09-tdd/fruitstore/Gemfile
+++ b/09-tdd/fruitstore/Gemfile
@@ -36,6 +36,7 @@ group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
   gem 'rspec-rails'
+  gem 'shoulda-matchers', '2.6.2'
 end
 
 group :development do
