--- a/09-tdd/fruitstore/Gemfile
+++ b/09-tdd/fruitstore/Gemfile
@@ -37,6 +37,7 @@ group :development, :test do
   gem 'byebug'
   gem 'rspec-rails'
   gem 'shoulda-matchers', '2.6.2'
+  gem 'simplecov', :require => false
 end
 
 group :development do
